2007-05-04  Guillaume Leroi  <guillaume.leroi@lrde.epita.fr>

	Move to Pidgin.
	netsoul_got_photo does not compile. We can't pass a null
	pointer as data to purple_imgstore_add. We need to find a way
	to get data from PurpleUtilFetchUrldata.
	* autogen.sh:,
	* config.sub:,
	* configure.ac:,
	* pixmaps/Makefile.in:,
	* src/Makefile.am:,
	* src/netsoul.h:,
	* src/ns_buddy.c:,
	* src/ns_chat.c:,
	* src/ns_connection.c:,
	* src/ns_listen.c:,
	* src/ns_output.c:,
	* src/ns_utils.c: Rename gaim_, GAIM prefixes to purple_ and PURPLE.
	* src/netsoul.c: Same renaming. Adatp to API changes.

2007-02-04  Julien Stuyck <stuyck_j@3ie.org>
	* Plugin works on beta6.
	* Add Svn and delete Cvs.
	* New configuration script ./autogen.sh.
	* Many compilation Warning solved.
	
2007-01-15  Guillaume Leroi  <leroi@champoteux.lrde.epita.fr>

 Make changes so gaim-netsoul compiles with gaim-2beta5

	* src/Makefile.am: Add GAIM_PLUGINS to AM_CFLAGS.
	* src/netsoul.h: Suppress inclusion of internal.h. Replace it by
	glib.h and gil8n.h.
	* src/netsoul.c: Suppress some warnings at compile time.

2006-09-17  Guillaume Leroi  <guillaume.leroi@lrde.epita.fr>

	* src/netsoul.c (netsoul_get_buddies): Buddy icons are properly
	downloads.

2006-09-13  Guillaume Leroi  <guillaume.leroi@lrde.epita.fr>

	* Now works with Gaim-2.0.0Beta3.1.
